--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ p {
 	width: 155px;
 	height: 39px;
 	border-radius: 4px;
+	border: none;
 	background: #ff7500;
 	transition: opacity 0.4s ease;
 }
@@ -147,7 +148,7 @@ p {
 	border-radius: 4px;
 	text-decoration: none;
 	background: #ff7500;
-	transition: opacity 3.4s ease;
+	transition: opacity 0.4s ease;
 }
 .hero-link:hover {
 	opacity: 0.8;
@@ -157,6 +158,7 @@ p {
 }
 .feature {
 	margin-bottom: 245px;
+	padding-top: 209px;
 }
 .feature-title {
 	padding-top: 24px;
@@ -249,3 +251,87 @@ p {
 .promotion-text-color {
 	color: #ff7500;
 }
+.promotion-link {
+	color: #fff;
+	font-family: Roboto;
+	font-size: 13px;
+	margin-top: 40px;
+	font-style: normal;
+	font-weight: 700;
+	list-style: none;
+	line-height: normal;
+	letter-spacing: 0.5px;
+	display: inline-flex;
+	padding: 12px 24px;
+	justify-content: center;
+	align-items: center;
+	border-radius: 4px;
+	text-decoration: none;
+	background-color: #ff7500;
+	transition: opacity 0.4 ease;
+}
+.promotion-link:hover {
+	opacity: 0.8;
+}
+
+.promotion-link:active {
+	opacity: 0.6;
+}
+.footer {
+	padding-top: 56px;
+	padding-bottom: 56px;
+	background-color: #f8f8f8;
+}
+
+.footer-top {
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 40px;
+}
+.footer-top a {
+	transition: opacity 0.4 ease;
+}
+.footer-top a:hover {
+	opacity: 0.8;
+}
+.footer-top a:active {
+	opacity: 0.6;
+}
+
+.footer-list {
+	list-style: none;
+	display: flex;
+	margin: 0;
+	padding: 0;
+}
+
+.footer-item:not(last-child) {
+	margin-right: 16px;
+}
+
+.footer-social {
+	color: #000;
+	transition: color 0.4 ease, opacity 0.4 ease;
+}
+
+.footer-social:hover {
+	fill: #ff7500;
+}
+.footer-social:active {
+	opacity: 0.6;
+}
+.footer-hr {
+	width: 1100px;
+	height: 3px;
+	background: rgba(37, 36, 32, 0.5);
+	border: none;
+}
+
+/* .footer-bottom-list {
+	display: flex;
+}
+
+.footer-bottom-text {
+	display: flex;
+
+} */
